2009-03-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Declared hide() in OptionHandler.
	* src/NameMatchOptionHandler.h
	* src/OptionHandler.h
	* src/OptionHandlerImpl.h
	
2009-03-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated doc
	* src/Peer.h

2009-03-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added log message in setStatusInternal()
	* src/ServerStat.cc

2009-03-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Call ServerStat::setError() in AbstractCommand::onAbort() to
	effectively exclude failed server.
	* src/AbstractCommand.cc
	
2009-03-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added --index-out option to specify each file path for torrent.
	Here index shown in --show-files option is used to specify which
	file path should be altered. For example, to change the file path
	with index=2, use --index-out=2=aria2.tar.bz2. You can use this
	option multiple times: --index-out=1=aria2.tar.bz2
	--index-out=2=aria2-opt.tar.bz2. The short hand form -O is also
	available. This option can be specified in -i list.	
	* src/DefaultBtContext.cc
	* src/DefaultBtContext.h
	* src/MultiDiskAdaptor.cc
	* src/MultiDiskAdaptor.h
	* src/MultiFileAllocationIterator.cc
	* src/OptionHandlerFactory.cc
	* src/OptionHandlerImpl.h
	* src/Util.cc
	* src/Util.h
	* src/download_helper.cc
	* src/prefs.cc
	* src/prefs.h
	* src/usage_text.h
	* test/DefaultBtContextTest.cc
	* test/MultiDiskAdaptorTest.cc
	* test/MultiFileAllocationIteratorTest.cc
	* test/UtilTest.cc

2009-03-05  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use Util::pathJoin()
	* src/MetalinkParserController.cc
	* test/test.xml
	
2009-03-05  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use Util::pathJoin()
	* src/DefaultBtContext.cc
	
2009-03-05  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added Util::pathJoin()
	* src/Util.h
	* test/UtilTest.cc
