@@ -1,5 +1,14 @@
 2009-03-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
+	Don't reset URI in retry to avoid additional round trips because
+	of redirects.	
+	* src/AbstractCommand.cc
+	* src/OptionHandlerFactory.cc
+	* src/prefs.cc
+	* src/prefs.h
+
+2009-03-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
 	Declared hide() in OptionHandler.
 	* src/NameMatchOptionHandler.h
 	* src/OptionHandler.h
